--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html>
 	<head>
 		 <title> Lab 3 Part 1 | CS 103 </title>
-        <link rel=" stylesheet" type="text/css"
-        href="main.css" />
+        <link rel=" stylesheet" type="text/css" href="main.css" />
 	</head>
 	<body>
 		<h1> Lab 3 Challenge </h1>
